[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperloom"
version = "1.0.0"
description = "A polished desktop image-to-PDF converter."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paperloom contributors" }]
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
dnd = ["tkinterdnd2>=0.4.2"]
api = [
    "fastapi>=0.110,<1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.27,<1.0",
]
dev = ["pytest>=7.0"]

[project.scripts]
paperloom = "img_to_pdf.app:main"
paperloom-api = "img_to_pdf.api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
